[tool.poetry]
name = "snek"
version = "0.1.0"
description = ""
authors = ["kkmol <kieran.molloy@zuto.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.82.0"
uvicorn = "^0.18.3"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
